spacing between images fix

--- a/themes/ESGI-theme/src/css/components/_team.scss
+++ b/themes/ESGI-theme/src/css/components/_team.scss
@@ -32,8 +32,8 @@
 .teams-container .row {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  gap: 20px;
+  justify-content: flex-start;
+  gap: 35px;
   flex-wrap: nowrap;
   align-items: flex-start;
   margin-right: 0;
@@ -45,8 +45,7 @@
   border-radius: 0;
   box-shadow: none;
   padding: 0;
-  width: calc(25% - 15px);
-  max-width: 220px;
+  width: 300px;
   min-height: unset;
   display: flex;
   flex-direction: column;
@@ -55,9 +54,8 @@
 }
 
 .team-img {
-  width: 100%;
-  max-width: 220px;
-  height: 265px;
+  width: 280px;
+  height: 420px;
   object-fit: cover;
   border-radius: 0;
   margin-bottom: 24px;
@@ -69,7 +67,7 @@
   font-size: 1.5rem;
   font-weight: 600;
   color: #1a2240;
-  margin-bottom: 12px;
+  margin-bottom: 20px;
   text-align: left;
 }
 
